syntax = "proto3";

package api;

option go_package = "internal/generated/clients/teams/v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service Persons {
  rpc GetPerson (GetPersonRequest) returns (GetPersonReply) {} // Получить сотрудника по ID
  rpc GetPersons (GetPersonsRequest) returns (GetPersonsReply) {} // Получить список сотрудников
  rpc AddPerson (AddPersonRequest) returns (AddPersonReply) {}  // Добавить нового сотрудника
  rpc UpdatePerson (UpdatePersonRequest) returns (google.protobuf.Empty) {} // Изменить данные сотрудника
  rpc RemovePerson (RemovePersonRequest) returns (google.protobuf.Empty) {} // Удалить сотрудника
}

enum Role {
  NONE = 0;
  BACK_END = 1;
  FRONT_END = 2;
  MOBILE = 3;
  QA = 4;
}

message AddPersonRequest {
  int64 team_id  = 1; // Уникальный идентификатор команды
  string first_name = 2; // Имя
  google.protobuf.StringValue middle_name = 3; // Отчество
  string last_name = 4; // Фамилия
  google.protobuf.Timestamp birthday = 5; // Дата рождения
  google.protobuf.StringValue email = 6; // Email
  google.protobuf.StringValue phone = 7; // Телефон
  string slack = 8; // Идентификатор в Slack
  Role role = 9; // Тип разработчика
  bool isActive = 10; // Участвует ли в дежурствах
}

message AddPersonReply {
  int64 id = 1; // Уникальный идентификатор сотрудника
}

message UpdatePersonRequest {
  int64 id = 1; // Уникальный идентификатор сотрудника
  int64 team_id  = 2; // Уникальный идентификатор команды
  string first_name = 3; // Имя
  google.protobuf.StringValue middle_name = 4; // Отчество
  string last_name = 5; // Фамилия
  google.protobuf.Timestamp birthday = 6; // Дата рождения
  google.protobuf.StringValue email = 7; // Email
  google.protobuf.StringValue phone = 8; // Телефон
  string slack = 9; // Идентификатор в Slack
  Role role = 10; // Тип разработчика
  int64 duty_order = 11; // Уникальный порядок дежурства сотрудника
  bool isActive = 12; // Участвует ли в дежурствах
}

message RemovePersonRequest {
  int64 id = 1;  // Уникальный идентификатор сотрудника
}

message GetPersonsRequest {
  PersonFilter filter = 1; // Фильтр сотрудников
  int64 limit = 2; // Пагинация, получаемые записи
  int64 offset = 3; // Пагинация, пропускаемые записи
  string order = 4; // Поле для сортировки id|name
  string sort = 5; // Тип сортировки asc|desc
}

message PersonFilter {
  repeated int64 person_ids = 1; // Список уникальных идентификаторов сотрудников
  repeated int64 team_ids = 2; // Список уникальных идентификаторов команд
  google.protobuf.Timestamp DateFrom = 3; // Создана после
  google.protobuf.Timestamp DateTo = 4; // Создана до
}

message GetPersonsReply {
  repeated Person persons = 1; // Список сотрудников
}

message GetPersonRequest {
  int64 id = 1;  // Уникальный идентификатор сотрудника
}

message GetPersonReply {
  Person person = 1; // Сотрудник
}

message Person {
  int64 id = 1; // Уникальный идентификатор сотрудника
  int64 team_id  = 2; // Уникальный идентификатор команды
  string first_name = 3; // Имя
  google.protobuf.StringValue middle_name = 4; // Отчество
  string last_name = 5; // Фамилия
  google.protobuf.Timestamp birthday = 6; // Дата рождения
  google.protobuf.StringValue email = 7; // Email
  google.protobuf.StringValue phone = 8; // Телефон
  string slack = 9; // Идентификатор в Slack
  Role role = 10; // Тип разработчика
  bool isActive = 12; // Участвует ли в дежурствах
  google.protobuf.Timestamp created = 13; // Время создания
  google.protobuf.Timestamp updated = 14; // Время изменения
}